--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "chalk": "^5.4.1",
+    "cloudinary": "^1.30.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
     "fuse.js": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "simple-node-logger": "^21.8.12"
   }
 }
